hphp/test/quick/tobadtype.php.expectf
test int
string(47) "Object of class X could not be converted to int"
test dbl
string(49) "Object of class X could not be converted to float"
test str

Catchable fatal error: Object of class X could not be converted to string in %s/tobadtype.php on line 17
